// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <div
    className="pb-4"
    key="0"
  >
    <Component
      heading="Personal Details"
      menu={
        <div>
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Unknown>
        </div>
      }
    >
      <div
        className="undefined undefined"
      >
        <FaCheck />
        <span>
          Completed
        </span>
      </div>
    </Component>
  </div>
  <div
    className="pb-4"
    key="1"
  >
    <Component
      heading="Primary ID"
      menu={
        <div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Unknown>
        </div>
      }
    >
      <div
        className="undefined undefined"
      >
        <FaTimes />
        <span>
          Incomplete
        </span>
      </div>
    </Component>
  </div>
  <div
    className="pb-4"
    key="2"
  >
    <Component
      heading="Secondary ID"
      menu={
        <div>
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Unknown>
        </div>
      }
    >
      <div
        className="undefined undefined"
      >
        <FaCheck />
        <span>
          Completed
        </span>
      </div>
    </Component>
  </div>
  <div
    className="pb-4"
    key="3"
  >
    <Component
      heading="Address Information"
      menu={
        <div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Unknown>
        </div>
      }
    >
      <div
        className="undefined undefined"
      >
        <FaTimes />
        <span>
          Incomplete
        </span>
      </div>
    </Component>
  </div>
  <div
    className="pb-4"
    key="4"
  >
    <Component
      heading="Declaration Risk Management"
      menu={
        <div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Unknown>
        </div>
      }
    >
      <div
        className="undefined undefined"
      >
        <FaTimes />
        <span>
          Incomplete
        </span>
      </div>
    </Component>
  </div>
  <div
    className="pb-4"
    key="5"
  >
    <Component
      heading="Report"
      menu={
        <div>
          <Unknown
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            View
          </Unknown>
        </div>
      }
    />
  </div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Component />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Connect(ErrorBoundary)>
  <Component
    isScrollable={true}
  >
    <div>
      <Component
        flexColumn={true}
        hasPadding={true}
      >
        <Connect(Component) />
        <div
          className="pb-4"
          key="0"
        >
          <Component
            heading="Personal Details"
            menu={
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaCheck />
                  <span>
                    Completed
                  </span>
                </div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  Edit
                </Unknown>
              </div>
            }
          >
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
          </Component>
        </div>
        <div
          className="pb-4"
          key="1"
        >
          <Component
            heading="Primary ID"
            menu={
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  Edit
                </Unknown>
              </div>
            }
          >
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
          </Component>
        </div>
        <div
          className="pb-4"
          key="2"
        >
          <Component
            heading="Secondary ID"
            menu={
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaCheck />
                  <span>
                    Completed
                  </span>
                </div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  Edit
                </Unknown>
              </div>
            }
          >
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
          </Component>
        </div>
        <div
          className="pb-4"
          key="3"
        >
          <Component
            heading="Address Information"
            menu={
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  Edit
                </Unknown>
              </div>
            }
          >
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
          </Component>
        </div>
        <div
          className="pb-4"
          key="4"
        >
          <Component
            heading="Declaration Risk Management"
            menu={
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  Edit
                </Unknown>
              </div>
            }
          >
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
          </Component>
        </div>
        <div
          className="pb-4"
          key="5"
        >
          <Component
            heading="Report"
            menu={
              <div>
                <Unknown
                  type="button"
                  variant="primary"
                >
                  View
                </Unknown>
              </div>
            }
          />
        </div>
      </Component>
    </div>
  </Component>
  <withRouter()
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</Connect(ErrorBoundary)>
`;
